<resources>
    <string name="nav_header_title">Лермонтов М.Ю.</string>
    <string name="nav_header_subtitle">Стихи</string>

    <string name="favorites">Избранное</string>
    <string name="settings">Настройки</string>
    <string name="store">Магазин</string>

    <string name="menu_articles">Каталог</string>
    <string name="menu_article">Просмотр</string>
    <string name="menu_favorites">@string/favorites</string>
    <string name="menu_settings">@string/settings</string>
    <string name="menu_store">Отключить рекламу</string>
    <string name="menu_about">О приложении</string>

    <string name="action_settings">@string/settings</string>
    <string name="action_add_to_favorites">В избранное</string>
    <string name="action_clear_favorites">Очистить избранное</string>

    <string name="search_placeholder">Поиск…</string>

    <string name="generalSettings">Основные</string>

    <string name="font_size">Размер шрифта</string>
    <string name="font_size_small">Маленький</string>
    <string name="font_size_medium">Средний</string>
    <string name="font_size_large">Большой</string>

    <string name="clear_favorites_dialog_title">Очистить избранное</string>
    <string name="clear_favorites_dialog_message">Вы уверены, что хотите удалить все из избранного?</string>

    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="store_text">Над развитием приложения идет постоянная работа. Вы можете поддержать проект, купив один из вариантов отключения рекламы.</string>
    <string name="thanks_for_purchase">Спасибо за оплату!</string>

    <string name="store_item_title">Отключить рекламу</string>

    <string name="author">Епифанов Е.В.</string>
    <string name="authorEmail">eevcode@gmail.com</string>

</resources>