<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" android:id="@+id/menu_group_content">
        <item
            android:id="@+id/nav_articles"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/menu_articles" />

        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/menu_favorites" />
    </group>

    <group android:checkableBehavior="single" android:id="@+id/menu_group_settings">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />
    </group>

    <group android:checkableBehavior="single" android:id="@+id/menu_group_store">

        <item
            android:id="@+id/nav_store"
            android:icon="@drawable/ic_baseline_monetization_on_24"
            android:title="@string/menu_store" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_about" />

    </group>
</menu>